RESOLVED FIXED60730
WebFindOptionsAtWordStarts still fails with some Japanese words
https://bugs.webkit.org/show_bug.cgi?id=60730
Summary WebFindOptionsAtWordStarts still fails with some Japanese words
mitz
Reported 2011-05-12 15:06:10 PDT
WebFindOptionsAtWordStarts still fails with some Japanese words
Attachments
Consider every position before a CJK ideograph as a word start (4.62 KB, patch)
2011-05-12 15:08 PDT, mitz
sam: review+
mitz
Comment 1 2011-05-12 15:07:16 PDT
mitz
Comment 2 2011-05-12 15:08:50 PDT
Created attachment 93352 [details] Consider every position before a CJK ideograph as a word start
mitz
Comment 3 2011-05-12 15:30:45 PDT
Note You need to log in before you can comment on or make changes to this bug.