Source/WebCore: <rdar://problem/8970549> WebFindOptionsAtWordStarts still fails with some Japanese words https://bugs.webkit.org/show_bug.cgi?id=60730

Reviewed by Sam Weinig.

* editing/TextIterator.cpp:
(WebCore::SearchBuffer::isWordStartMatch): Consider all positions before a CJK ideograph as
word starts.

LayoutTests: Updated results for <rdar://problem/8970549> WebFindOptionsAtWordStarts still fails with some Japanese words
https://bugs.webkit.org/show_bug.cgi?id=60730

Reviewed by Sam Weinig.

* editing/text-iterator/findString-expected.txt:
* editing/text-iterator/findString.html:



Canonical link: https://commits.webkit.org/76044@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86387 268f45cc-cd09-0410-ab3c-d52691b4dbfc